--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <body>
         <header>
             <h3>Auto Correction Tests - </h3>
-            <div class="divDownload">
+            <div class="divDownload" onclick="document.getElementById('aDownload').click()">
                 <i class="fa fa-download"></i>
-                <a href="Template.pdf" target="_blank" download>Template</a>
+                <a href="Template.pdf" id="aDownload" target="_blank" download>Template</a>
             </div>
         </header>
 
