--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <header>
             <ul class="topnav">
                 <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#/template">Download Template</a></li>
-                <li><a href="#/sobre">Sobre</a></li>
+                <li><a href="/AutoCT-Web/template">Download Template</a></li>
+                <li><a href="/AutoCT-Web/sobre">Sobre</a></li>
                 <!-- <li class="right"><a href="#about">About</a></li> -->
             </ul>
         </header>
