name website in menu

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -1,2 +1,27 @@
-<div class="github-card" data-github="AlfredoFilho" data-width="400" data-height="150" data-theme="default"></div>
-<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <title>AutoCT - Sobre</title>
+
+        <!-- Extern imports -->
+        <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js" defer></script>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <!-- My imports -->
+        <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
+
+    <body style= "margin: 0;"> 
+        <header>
+            <ul class="topnav">
+                <li><a id="nameWebsite" href="/AutoCT-Web">AutoCT</a></li>
+                <li><a href="/AutoCT-Web">Home</a></li>
+                <li><a href="/AutoCT-Web/template">Download Template</a></li>
+                <li><a class="active" href="">Sobre</a></li>
+            </ul>
+        </header>
+
+        <div class="github-card" data-github="AlfredoFilho" data-width="400" data-height="150" data-theme="default"></div>
+    </body>
+</html>
