--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <title>AutoCT</title>
+        
         <!-- Extern imports -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-message-box@3.2.1/dist/messagebox.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.7/dist/loadingoverlay.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-message-box@3.2.1/dist/messagebox.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -19,9 +19,10 @@
     <body>
         <header>
             <ul class="topnav">
-                <li><a class="active" href="#home">Home</a></li>
-                <li><a href="/AutoCT-Web/template">Download Template</a></li>
-                <li><a href="/AutoCT-Web/sobre">Sobre</a></li>
+                <li><a id="nameWebsite" href="">AutoCT</a></li>
+                <li><a class="active" href="">Home</a></li>
+                <li><a href="/AutoCT-Web/template" target="_blank">Download Template</a></li>
+                <li><a href="/AutoCT-Web/sobre" target="_blank">Sobre</a></li>
                 <!-- <li class="right"><a href="#about">About</a></li> -->
             </ul>
         </header>
