--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>AutoCT</title>
+        <link rel='icon' href='favicon.png' type='image/png'/>
         
         <!-- Extern imports -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -34,8 +35,12 @@
 
         <div class="quantPerguntas">
             <h1 class="titleH1" >Alternativas  </h1>
-            <input type="text" maxlength="3" id="quantAlt" onkeydown="if (event.keyCode == 13) document.getElementById('btnMontarAlt').click()" placeholder="Quantidade" oninput="numberOnly(this)" disabled>
-            <input type="submit" id="btnMontarAlt" value="Montar" onclick="insertAlternativas(document.getElementById('quantAlt').value)" disabled>
+            <select id="selectAlt" onchange="insertAlternativas(this)">
+                <option value="" selected>Escolha uma opção</option>
+                <option value="30">30</option>
+                <option value="20">20</option>
+                <option value="10">10</option>
+              </select>
         </div>
         
         <div id="alternativas">
@@ -43,8 +48,12 @@
 
         <div class="quantPerguntas">
             <h1 class="titleH1" >Outras </h1>
-            <input type="text" maxlength="3" id="quantOut" onkeydown="if (event.keyCode == 13) document.getElementById('btnMontarOut').click()" placeholder="Quantidade" disabled>
-            <input type="submit" id="btnMontarOut" value="Montar" onclick="insertOutras(document.getElementById('quantOut').value)" disabled>
+            <select id="selectOut" onchange="insertOutras(this)">
+                <option value="" selected>Escolha uma opção</option>
+                <option value="30">30</option>
+                <option value="20">20</option>
+                <option value="10">10</option>
+              </select>
         </div>
 
         <div id="outras">
