--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
             <h1 class="titleH1" >Alternativas  </h1>
             <select id="selectAlt" onchange="insertAlternativas(this)">
                 <option value="" selected>Escolha uma opção</option>
+                <option value="999" disabled>Não contém</option>
                 <option value="30">30</option>
-                <option value="20">20</option>
-                <option value="10">10</option>
+                <option value="20" disabled>20</option>
+                <option value="10" disabled>10</option>
               </select>
         </div>
         
@@ -50,9 +51,9 @@
             <h1 class="titleH1" >Outras </h1>
             <select id="selectOut" onchange="insertOutras(this)">
                 <option value="" selected>Escolha uma opção</option>
-                <option value="30">30</option>
-                <option value="20">20</option>
+                <option value="999" disabled>Não contém</option>
                 <option value="10">10</option>
+                <option value="20" disabled>20</option>
               </select>
         </div>
 
