--- a/sobre/index.html
+++ b/sobre/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>AutoCT - Sobre</title>
+        <link rel='icon' href='../favicon.png' type='image/png'/>
 
         <!-- Extern imports -->
         <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js" defer></script>
