update href in menu

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <ul class="topnav">
                 <li><a id="nameWebsite" href="">AutoCT</a></li>
                 <li><a class="active" href="">Home</a></li>
-                <li><a href="/AutoCT-Web/template" target="_blank">Download Template</a></li>
-                <li><a href="/AutoCT-Web/sobre" target="_blank">Sobre</a></li>
+                <li><a href="/AutoCT/template" target="_blank">Download Template</a></li>
+                <li><a href="/AutoCT/sobre" target="_blank">Sobre</a></li>
                 <!-- <li class="right"><a href="#about">About</a></li> -->
             </ul>
         </header>
