--- a/sobre/index.html
+++ b/sobre/index.html
@@ -17,8 +17,8 @@
         <header>
             <ul class="topnav">
                 <li><a id="nameWebsite" href="/AutoCT-Web">AutoCT</a></li>
-                <li><a href="/AutoCT-Web">Home</a></li>
-                <li><a href="/AutoCT-Web/template">Download Template</a></li>
+                <li><a href="/AutoCT">Home</a></li>
+                <li><a href="/AutoCT/template">Download Template</a></li>
                 <li><a class="active" href="">Sobre</a></li>
             </ul>
         </header>
