--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
         </div>
         <button class="btnsStyles btnLimpar" id="btnLimpar">Limpar</button>
         <button class="btnsStyles btnCorrigir" id="btnCorrigir">Corrigir</button>
+        
+        <!-- <div id="respostasAPI" style=" border: 1px solid;padding: .5em;font-family: monospace;white-space: pre;">
+        </div> -->
     </body>
 </html>
