--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
                 <li><a id="nameWebsite" href="/AutoCT-Web">AutoCT</a></li>
                 <li><a href="/AutoCT">Home</a></li>
                 <li><a href="/AutoCT/template">Download Template</a></li>
-                <li><a class="active" href="">Sobre</a></li>
+                <li><a class="active" href="">About</a></li>
             </ul>
         </header>
 
