reorganizando árvore de arquivos

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -13,13 +13,13 @@
 
         <meta charset="utf-8"/>
         <title>AutoCT - Sobre</title>
-        <link rel='icon' href='../favicon.png' type='image/png'/>
+        <link rel='icon' href='../../assets/favicon.png' type='image/png'/>
 
         <!-- Extern imports -->
         <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js" defer></script>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <!-- My imports -->
-        <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+        <link rel="stylesheet" type="text/css" href="../../assets/css/navbar.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
@@ -28,7 +28,7 @@
             <ul class="topnav">
                 <li><a id="nameWebsite" href="/AutoCT-Web">AutoCT</a></li>
                 <li><a href="/AutoCT">Home</a></li>
-                <li><a href="/AutoCT/template">Download Template</a></li>
+                <li><a href="/AutoCT/pages/template">Download Template</a></li>
                 <li><a class="active" href="">About</a></li>
             </ul>
         </header>
