resposta AWS em base64/predição de RA

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
     <script src="assets/js/scripts.js" defer></script>
-    <script src="assets/js/jquery.js" defer></script>
+    <script src="assets/js/jquery-main.js" defer></script>
 </head>
 
 <body>
@@ -79,38 +79,7 @@
 
     <div id="API" style="display: none;">
         <!-- Content Test -->
-        <div class="test">
-            <!-- Image -->
-            <div id="imageID">
-                <div class="idStudent">
-                    <label>RA:</label>
-                    <input type='text' maxlength='6'></input>
-                </div>
-                <span>
-                    <img id="imgB64">
-                </span>
-            </div>
-            <!-- Responses -->
-            <div class="resultResponse">
-                <!-- Content Alternatives -->
-                <div class="alternativesAPI" id="xx">
-                    <h3>Alternatives:</h3>
-                    <!-- <div class="alt">
-                        <label>ID:</label>
-                        <input type='text' maxlength='1'></input>
-                    </div> -->
-                </div>
-                <hr>
-                <!-- Content Others -->
-                <div class="othersAPI">
-                    <h3>Others:</h3>
-                    <div class="oth">
-                        <label>31:</label>
-                        <input type='text' maxlength='1'></input>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </div>
 </body>
 
