--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div id="answersQuestions">
         <div class="divFile">
-            <p>Tests - <strong>PDF</strong></p>
+            <p>Tests - <strong>PNG</strong></p>
             <input id="file" name="userfile" type="file" accept="application/pdf, image/jpeg, image/png" />
         </div>
 
